# pavo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  documentation.md  project.md  userStories.md
pavo-cli/src/: .clang-format  Makefile  config.mk  main.cpp  test.cpp
pavo-gui/include/gameLayer/: debugWindow.h  errorWindow.h  fileDialogue.h  hexEditor.h
pavo-gui/resources/: gameData.data
pavo-gui/src/gameLayer/: debugWindow.cpp  errorWindow.cpp  fileDialogue.cpp  gameLayer.cpp  hexEditor.cpp
pavo-gui/src/platform/: glfwMain.cpp
pavo-tests/src/: main.cpp
resources/: gameData.data
shared/include/: cpuFeatures.h  debugger.h  errorLogging.h  genericType.h  misc.h  pavoAssert.h  registers.h  stringutils.h  virtualQUery.h  virtualQuery.h
shared/src/: cpuFeatures.cpp  debuggerCommon.cpp  debuggerLinux.cpp  debuggerWin.cpp  errorLogging.cpp  registers.cpp  virtualQuery.cpp
test/: test.cpp
